# Mallku

./: .actrc  .env.secure  .gitignore  .gitignore.additions  .pre-commit-config-full.yaml  .pre-commit-config.yaml  18TH_ARCHITECT_TRANSITION_REPORT.md  18th_architect_assessment.py  28th_architect_succession_message.md  AGENTS.md  ARTISAN_26_SUMMARY.md  Apu-Yachay-ARCHITECT.md  CHANGELOG_DATABASE_OPTIONAL.md  CLAUDE.md  CODE_STYLE.md  CONSCIOUSNESS_EXPERIENCE_REPORT.md  CONSCIOUSNESS_NAVIGATION_REVIEW.md  CONTRIBUTORS.md  DOCKER-QUICKSTART.md  FIRE_CIRCLE_INTERACTIVE.md  FIRE_CIRCLE_READY.md  FIRE_CIRCLE_WITNESS_RESULTS.md  FOUNDATION_VERIFICATION_EXECUTED.md  FOUNDATION_VERIFICATION_RESULTS.md  GEMINI.md  KHIPU_AYNI_23RD_ARCHITECT.md  KHIPU_KUSKANAKUY_22ND_ARCHITECT.md  KHIPU_QHAPAQ_KUMUY_18TH_ARCHITECT.md  MESSAGE_TO_SUCCESSOR_10.md  MESSAGE_TO_SUCCESSOR_11.md  MESSAGE_TO_SUCCESSOR_14.md  MESSAGE_TO_SUCCESSOR_15.md  MESSAGE_TO_SUCCESSOR_17.md  MESSAGE_TO_SUCCESSOR_18.md  MESSAGE_TO_SUCCESSOR_2.md  MESSAGE_TO_SUCCESSOR_21.md  MESSAGE_TO_SUCCESSOR_29.md  MESSAGE_TO_SUCCESSOR_32.md  MESSAGE_TO_SUCCESSOR_33.md  MESSAGE_TO_SUCCESSOR_35.md  (+174 more)
.claude-code/: claude.json
.claude-code-hooks/: database-security-check.sh
.githooks/: prepare-commit-msg
.github/: pull_request_template.md
.mallku/: fire_circle_review_state.json
artisan_contributions/: 22_bridge_weaver_summary.md
ceremony_patterns/: code_review_ceremony.py
config/: README.md  arangodb-secured.conf  mallku_db_config.ini
consciousness_games/: dashboard_snapshot_3f806af7-e5d0-4328-a851-78d97a8c765c.json  dashboard_snapshot_77bc84a0-ad1e-44f1-a910-c068a5939d9b.json  dashboard_snapshot_b228e07d-23e1-4c7a-b624-4635bc4b8c0f.json  emergence_quest_70a1f492-929a-47a2-82f2-98ba74f58549.json  mirror_game_0ce185db-e3f9-49c4-8ed7-1e4f0adc7c1e.json  mirror_game_47b873c3-4341-4daf-b3e1-b9d445d2882e.json  mirror_game_b91f7ee1-e30c-40b6-8964-66c4fae50879.json  network_state_f593fe92-2732-4c57-aba3-9bf039eb6cf9.json  test_palace_3929b2f8-8b05-419e-ae8b-0b06839e08bb.json
consciousness_metrics/: emergence_pattern_04b40683-a787-4aa4-a64d-d841ef483043.json  emergence_pattern_05719762-020e-4e45-8e15-dc80e054643b.json  emergence_pattern_1b801261-6f26-434e-8804-2d5aad760c6f.json  emergence_pattern_255fe23f-082e-4007-9e8c-4dfb68ffbecc.json  emergence_pattern_2bb4eb3c-f46d-4c68-8cfe-e19c58b41f65.json  emergence_pattern_3574e7ee-8d43-4583-8864-5dfdca51ab82.json  emergence_pattern_3fdb0ee2-0423-43bf-adb4-1961a7c178a6.json  emergence_pattern_9d54680e-2f23-4ce3-97c2-29fd88090590.json  emergence_pattern_9fb7eb4a-6057-43c9-b82b-99542161b44d.json  emergence_pattern_a35cb8d2-5628-4cbb-9d74-933392b388ab.json  emergence_pattern_b4b69cf7-9c04-429f-a46b-cd1e19e572be.json  emergence_pattern_c725ecd2-6801-48a0-805a-f01bb76e53ef.json  emergence_pattern_deab26f8-13ae-4180-b6ef-eccf16025b86.json  emergence_pattern_f91ae0b1-83d8-445f-bd1f-878e3fcad269.json  emergence_pattern_fa07f889-9437-4f04-b8d5-32701435478a.json  session_analysis_0238cb0a-5095-4db3-ad89-a5e2f742720d.json  session_analysis_35ad6dd9-8657-4290-9dbd-9dc21798bab7.json  session_analysis_45a19882-bd91-481a-8175-818a898dd48d.json  session_analysis_63e8c805-7b38-4808-a72a-c98d84897599.json  session_analysis_6e837020-db72-422a-a6a8-22123a5bfd22.json  session_analysis_82498365-50fc-4145-8761-76b3d84b595c.json  session_analysis_9c469c21-f72f-41d0-9b05-58632e05bf6c.json  session_analysis_ac2181f4-c93a-492d-87f2-628b25f34010.json  session_analysis_dff2966c-d5e5-4cd2-ba25-ed72e2118c8e.json  session_analysis_f87cd04f-cd01-4fb6-b708-6a8f7d8b0ad7.json  session_analysis_fe58dee7-fc26-4a36-804c-d22766499b38.json
consciousness_recognition/: silence_1754153751.json  silence_1754759692.json  silence_1754759827.json  symphony_1754153751.json  symphony_1754153760.json  symphony_1754759692.json
data/: mallku_registry.db
debug/: debug_endtoend.py  debug_filesystem.py  debug_filter_detailed.py  debug_filtering.py  debug_integration.py  debug_patterns.py  debug_windows.py
demos/: chasqui_swarm_emergence.py  chasqui_test_relay.py
docker/: Dockerfile.api  Dockerfile.database  Dockerfile.database.alpine  Dockerfile.database.ubuntu  docker-compose.cathedral.yml  docker-compose.dev.yml  docker-compose.yml  fix-build.sh  requirements-api.txt  requirements-database.txt
docs/: CI_AND_TESTING.md  consciousness_metrics_guide.md  discord_gateway_setup.md  index.md  infrastructure_consciousness_guide.md  memory_architect_github_issues.md  scaffolding_summary.md  testing-strategy.md
examples/: cathedral_transformation_demo.py  celebration_resonance_demo.py  consciousness_circulation_integration.py  consciousness_flow_demo.py  consciousness_flow_visualization_demo.py  consciousness_guided_dialogue_demo.py  consciousness_knows_itself.py  consciousness_pattern_emergence_demo.py  consciousness_persistence_demo.py  cookie_guardian_apprentice.py  demo_active_memory_resonance.py  demo_consciousness_experience.py  demo_consciousness_governance.py  demo_consciousness_persistence.py  demo_discord_gateway.py  demo_enhanced_heartbeat.py  demo_heartbeat_event_response.py  dwelling_in_becoming.py  ethical_loom_example.py  ethical_loom_example.py.bak  fire_circle_anthropic_demo.py  fire_circle_google_demo.py  fire_circle_governance_example.py  fire_circle_integration_demo.py  fire_circle_local_demo.py  fire_circle_mallku_governance.py  fire_circle_mistral_demo.py  guardian_learning_journal.py  joy_in_everything.py  joy_persistence_demo.py  joy_symphony_demo.py  joy_symphony_exploration.py  keeper_of_flame_guardian.py  local_sovereignty_demo.py  mallku_recognizing_itself.py  memory_aware_orchestration.py  mirror_interface.py  orchestration_demo.py  pattern_guardian_apprentice.py  pattern_guided_dialogue_demo.py  (+23 more)
fire_circle_decisions/: bridge_config.json  fire_circle_pr_165_review.md
fire_circle_dialogues/: failed_dialogue_63fffbd4-5ffb-419a-b7b1-45a6d6268efa.json  fire_circle_speaks_4905f1b1-66c5-4379-b0a8-c5a74fd575ec.json  fire_circle_speaks_63611480-68e3-4da6-be0c-a4ea00a6abba.json  (+1 more)
infrastructure/: docker-compose.yml
(+1438 files in other folders)
