[project]
name = "mallku"
version = "0.1.0"
description = "Mallku is a cooperative venture in better finding through AI-Human collaboration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pydantic>=2.11.5",
    "python-arango>=8.1.7",
    "uvicorn>=0.34.2",
    "watchdog>=6.0.0",
    "websockets>=15.0.1",
    "rich>=12.0.0",
    # Container and infrastructure dependencies
    "docker>=7.1.0",
    # Security dependencies
    "cryptography>=42.0.0",
    # LLM provider dependencies (optional)
    "anthropic>=0.5.0; extra == 'llm'",
    "openai>=1.0.0; extra == 'llm'",
    "plotly>=6.1.2",
    "icecream>=2.1.4",
    "deepseek>=1.0.0",
    "google-genai>=1.19.0",
    "xai-sdk>=0.3.0",
    "openai>=1.82.1",
    "pillow>=11.2.1",
    "google-generativeai>=0.8.5",
    "numpy>=1.26.0",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
    "rich>=14.0.0",
    "llama-cpp-python>=0.3.9",
    "anthropic>=0.54.0",
    "langchain>=0.3.25",
    "aiohttp>=3.12.13",
    "discord>=2.3.2",
    "pygithub>=2.6.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = [
  "F",  # pyflakes
  "E",  # pycodestyle
  "W",  # warning style
  "I",  # isort
  "N",  # naming conventions
  "UP", # upgrades (future-proofing)
  "SIM", # simplify
  "TCH", # type-checking hygiene
  "DTZ", # datetime timezone awareness
]
ignore = [
  "E501",  # Allow longer lines for doc clarity
  "N802",  # Allow lowercase function names
]

[tool.ruff.lint.isort]
known-first-party = ["src", "dbfacade"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false


[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.12",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.5.0",
    "openai>=1.0.0",
]
local-ai = [
    "httpx>=0.28.1",  # For Ollama HTTP API
    "llama-cpp-python>=0.2.0",  # For direct model loading
]
docker = [
    "docker>=7.1.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
